--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "path": "^0.12.7",
-    "pg": "^8.16.0"
+    "pg": "^8.16.0",
+    "router": "^2.2.0"
   },
   "devDependencies": {
     "extract-inline-css": "^1.0.2",
